Add flutter_screenutil package to make responsive design

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.3.10
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
