--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,26 +27,30 @@ flutter:
 
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
+  # To add assets to your application, add an assets section
   assets:
     - assets/icons/
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  # To add custom fonts to your application, add a fonts section here
+  fonts:
+    - family: Jakarta
+      fonts:
+        - asset: assets/fonts/PlusJakartaSans-ExtraBold.ttf
+          style: normal
+          weight: 800
+
+        - asset: assets/fonts/PlusJakartaSans-Bold.ttf
+          style: normal
+          weight: 700
+
+        - asset: assets/fonts/PlusJakartaSans-SemiBold.ttf
+          style: normal
+          weight: 600
+
+        - asset: assets/fonts/PlusJakartaSans-Medium.ttf
+          style: normal
+          weight: 500
+
+        - asset: assets/fonts/PlusJakartaSans-Regular.ttf
+          style: normal
+          weight: 400
