--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ flutter:
   # To add assets to your application, add an assets section
   assets:
     - assets/icons/
+    - assets/images/
+    - assets/fonts/
 
   # To add custom fonts to your application, add a fonts section here
   fonts:
