--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_native_splash: ^2.3.10
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.9
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
