--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_svg: ^2.0.9
   smooth_page_indicator: ^1.1.0
   firebase_core: ^2.25.3
+  firebase_auth: ^4.17.3
 
 dev_dependencies:
   flutter_test:
