--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   firebase_core: ^2.25.3
   firebase_auth: ^4.17.3
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
