--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   firebase_core: ^2.25.3
   firebase_auth: ^4.17.3
   dartz: ^0.10.1
+  flutter_easyloading: ^3.0.5
+  bot_toast: ^4.1.3
 
 dev_dependencies:
   flutter_test:
