--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,12 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
+plugins {
+
+    // Add the dependency for the Google services Gradle plugin
+    id("com.google.gms.google-services") version "4.4.0" apply false
+
+}
 
 allprojects {
     repositories {
