--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   dartz: ^0.10.1
   flutter_easyloading: ^3.0.5
   bot_toast: ^4.1.3
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
