--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,10 @@ flutter:
 
   # To add assets to your application, add an assets section
   assets:
+    - assets/fonts/
     - assets/icons/
     - assets/images/
-    - assets/fonts/
+    - assets/images/nervous_system/
 
   # To add custom fonts to your application, add a fonts section here
   fonts:
