--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   carousel_slider: ^4.2.1
   provider: ^6.1.1
   shared_preferences: ^2.2.2
+  cloud_firestore: ^4.15.4
 
 dev_dependencies:
   flutter_test:
