Include unity library files

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -27,3 +27,7 @@ plugins {
 }
 
 include ":app"
+
+include ":unityLibrary:xrmanifest.androidlib"
+include ":unityLibrary"
+project(":unityLibrary").projectDir = file("./unityLibrary")
